syntax = "proto3";

//demo
package origins.proto.any;

option java_outer_classname = "EnvelopAnyOuterClass";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

import "urn.proto";

message EnvelopAny {

  Urn causation = 1;
  Urn correlation = 2;

  google.protobuf.Any event = 4;

}

message Harvested {

  Urn id = 1;
  google.protobuf.Timestamp harvestedAt = 2;
  Urn harvestedBy = 3;

}


message DistributionCenterReceived {

  Urn id = 1;
  google.protobuf.Timestamp receivedAt = 2;
  Urn receivedBy = 3;

}

message RetailerReceived {

  Urn id = 1;
  google.protobuf.Timestamp receivedAt = 2;
  Urn receivedBy = 3;

}